--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,3 +1,4 @@
+
 name: Node CI
 
 on: [push]
@@ -19,6 +20,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: npm install, build, and test
       run: |
+        npm install -g cnpm --registry=https://registry.npm.taobao.org
+        cnpm install -g vue-cli
+        cnpm install
         npm ci
         npm run build --if-present
         npm test
