--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [8.x, 10.x, 12.x]
+        node-version: [10.x]
 
     steps:
     - uses: actions/checkout@v1
@@ -22,7 +22,7 @@ jobs:
       run: |
         npm install -g cnpm --registry=https://registry.npm.taobao.org
         cnpm install -g vue-cli
-        cnpm install
+        cnpm install axios
         npm ci
         npm run build --if-present
         npm test
