--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,6 +22,6 @@ jobs:
       run: |
         npm ci
         npm run build --if-present
-        npm test
+        npm test --if-present
       env:
         CI: true
