--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -15,7 +15,7 @@ on:
 
 env:
   AZURE_WEBAPP_NAME: SpringVueFrontTest    # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: 'vue-test'      # set this to the path to your web app project, defaults to the repository root
+  AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '10.x'                # set this to the node version to use
 
 jobs:
@@ -34,6 +34,7 @@ jobs:
         # deploy to Azure Web App.
         npm install
         npm run build --if-present
+        npm run dev
 
     - name: 'Deploy to Azure WebApp'
       uses: azure/webapps-deploy@v1
