--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -33,6 +33,7 @@ jobs:
         # Build and test the project, then
         # deploy to Azure Web App.
         npm install
+        npm install webpack-cli -g
         npm run build --if-present
         npm run dev
 
