--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-dev-server": "^3.1.11",
-    "webpack-merge": "^4.1.0"C
+    "webpack-merge": "^4.1.0",
     "webpack-cli": "^3.3.0"
   },
   "engines": {
